--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ nvidia-cufft-cu12==11.2.1.3
 nvidia-curand-cu12==10.3.5.147
 nvidia-cusolver-cu12==11.6.1.9
 nvidia-cusparse-cu12==12.3.1.170
-nvidia-nccl-cu12==2.21.5
+# nvidia-nccl-cu12==2.22.3
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 orjson==3.10.15
@@ -99,7 +99,7 @@ torchaudio==2.5.1
 torchvision==0.20.1
 tqdm==4.67.1
 transformers==4.46.1
-triton==3.1.0
+# triton==3.1.0
 typer==0.15.1
 typing_extensions==4.12.2
 tzdata==2025.1
